Refatoraçï¿ao dos testes