@@ -2,12 +2,13 @@ package com.project.citiesapi.services;
 
 import com.project.citiesapi.entities.Country;
 import com.project.citiesapi.entities.State;
+import com.project.citiesapi.exceptions.CountryNotFound;
+import com.project.citiesapi.exceptions.StateNotFound;
 import com.project.citiesapi.repositories.StateRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.util.Arrays;
@@ -15,6 +16,8 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.BDDMockito.given;
 
 @SpringBootTest
@@ -29,7 +32,9 @@ class StateServiceTest {
     private final  Long ID = 1L;
     private final Integer IBGE = 156;
     private final String NAME = "TEST";
+    private final Integer INDEX = 0;
 
+    private State state;
     private List<State> list;
     private Optional<State> optional;
 
@@ -38,11 +43,10 @@ class StateServiceTest {
         Country pais = new Country(1L, "Brazil", "Brasil", "BR", 1058);
         List<Integer> ddd = Arrays.asList(15, 20, 35);
 
-        State estado1 = new State(ID, NAME, "MG", IBGE, pais, ddd);
-        State estado2 = new State(ID, NAME, "SP", IBGE, pais, ddd);
+        state = new State(ID, NAME, "MG", IBGE, pais, ddd);
 
-        list = Arrays.asList(estado2,estado1);
-        optional = Optional.of(estado1);
+        list = List.of(state);
+        optional = Optional.of(state);
     }
 
     @Test
@@ -56,17 +60,41 @@ class StateServiceTest {
         assertThat(test.getClass()).isEqualTo(list.getClass());
         assertThat(test.get(0)).isEqualTo(list.get(0));
 
+        assertThat(test.get(INDEX).getId()).isEqualTo(list.get(INDEX).getId());
+        assertThat(test.get(INDEX).getName()).isEqualTo(list.get(INDEX).getName());
+        assertThat(test.get(INDEX).getUf()).isEqualTo(list.get(INDEX).getUf());
+        assertThat(test.get(INDEX).getIbge()).isEqualTo(list.get(INDEX).getIbge());
+        assertThat(test.get(INDEX).getName()).isEqualTo(list.get(INDEX).getName());
+        assertThat(test.get(INDEX).getCountry()).isEqualTo(list.get(INDEX).getCountry());
+        assertThat(test.get(INDEX).getDdd()).isEqualTo(list.get(INDEX).getDdd());
+
     }
 
     @Test
     void shouldReturnAListOfCitiesWhenAIDParameterArePassed(){
-        given(stateRepository.findById(Mockito.anyLong())).willReturn(optional);
+        given(stateRepository.findById(anyLong())).willReturn(optional);
 
         State test = stateService.findById(ID);
 
-        assertThat(test).isEqualTo(optional.get());
+        assertThat(test).isEqualTo(state);
         assertThat(test).isNotNull();
-        assertThat(test.getClass()).isEqualTo(optional.get().getClass());
-        assertThat(test.getId()).isEqualTo(optional.get().getId());
+        assertThat(test.getClass()).isEqualTo(state.getClass());
+        assertThat(test.getId()).isEqualTo(state.getId());
+
+        assertThat(test.getId()).isEqualTo(state.getId());
+        assertThat(test.getName()).isEqualTo(state.getName());
+        assertThat(test.getUf()).isEqualTo(state.getUf());
+        assertThat(test.getIbge()).isEqualTo(state.getIbge());
+        assertThat(test.getName()).isEqualTo(state.getName());
+        assertThat(test.getCountry()).isEqualTo(state.getCountry());
+        assertThat(test.getDdd()).isEqualTo(state.getDdd());
     }
+
+    @Test
+    void shouldThrowACountryNotFoundExceptionWhenAEmptyOptionalArePasse(){
+        given(stateRepository.findById(anyLong())).willReturn(Optional.empty());
+
+        assertThrows(StateNotFound.class, () -> stateService.findById(ID), "Country not found for this id = " + ID);
+    }
+
 }
